--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,8 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1>Dan Tran</h1>
+			<p>UCSD Student, COGS SCI Major</p>
 		</div>
 
 
